--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,16 +18,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        
+      
+      - name: cleanup
+        run: |
+          rm -rf .git
+          rm -rf .github
+
+      # no rsync available on the server so we need to use scp 
       - name: Deploy/Sync 🚀
         env:
           dest: '${{secrets.SSH_USER}}@${{secrets.SSH_SERVER}}:${{secrets.DEPLOY_DESTINATION}}'
         run: |
           echo "${{secrets.DEPLOY_KEY}}" > deploy_key
           chmod 600 ./deploy_key
-          rsync -chav --delete \
-            -e 'ssh -i ./deploy_key -o StrictHostKeyChecking=no' \
-            --exclude /.git/ \
-            --exclude /.github/ \
-            --exclude /node_modules/ \
-            ./ ${{env.dest}}
+          scp -o StrictHostKeyChecking=no -i ./deploy_key . ${{env.dest}}
