--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "source.fixAll": true
   },
   "files.autoSave": "onFocusChange",
-  "eslint.run": "onSave"
+  "eslint.run": "onSave",
+  "editor.formatOnSave": true
 }
