--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,34 @@ jobs:
       - uses: actions/checkout@v2
         with:
           path: project
+    
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+        working-directory: project
+
+      - uses: actions/cache@v1
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+         path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+        working-directory: project
+
+      - name: Install dependencies
+        run: yarn install
+        working-directory: project
+
+      - name: Build 🔧
+        run: yarn dist
+        working-directory: project
+      
       - name: cleanup
         run: |
           rm -rf .git
           rm -rf .github
+          rm -rf node_modules
         working-directory: project
 
       # no rsync available on the server so we need to use scp 
