--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,15 @@ jobs:
           rm -rf .git
           rm -rf .github
           rm -rf node_modules
+          rm -rf .vscode
+          rm .gitignore
+          rm .eslintrc.json
+          rm .prettierrc
+          rm .package-lock.json
+          rm .package.json
+          rm yarn.lock
+          rm postcss.config.js
+          rm prettier.config.js 
         working-directory: project
 
       # no rsync available on the server so we need to use scp
