--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,4 +70,4 @@ jobs:
         run: |
           echo "${{secrets.DEPLOY_KEY}}" > deploy_key
           chmod 600 ./deploy_key
-          scp -o StrictHostKeyChecking=no -i ./deploy_key -r ./project/$(pwd) ${{env.dest}}
+          scp -o StrictHostKeyChecking=no -i ./deploy_key -r ./project/* ${{env.dest}}
